# hegemonikon

./: .bash_history  .bashrc  .claude.json  .claude.json.backup.1769910897655  .claude.json.backup.1769910897664  .claude.json.backup.1769911692900  .claude.json.backup.1769911990358  .claude.json.backup.1769911998462  .context_generator_state.json  .dockerignore  .editorconfig  .env  .env.example  .env.jules  .env.local  .env.template  .gitignore  .inputrc  .markdownlint.json  .pre-commit-config.yaml  .pyre_configuration  .sync-state.json  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEPRECATED.md  Dockerfile.gateway  LICENSE  PROOF.md  README.md  REVIEW_REPORT.md  REVIEW_jules_client.md  STRUCTURE.md  adaptive_allocator.py  add_headers.py  add_proof.py  add_proof_headers.py  add_purpose.py  agents.md  (+125 more)
(未定)※ファイル構造精査/: .forge-index.json  MANUAL.md  PLAN_OBSIDIAN_PIVOT.md  USER_MANUAL.md  index.json  package-lock.json  package.json  test_fast_fetch_v2.py
.Jules/: ci_deps_learning.md  ci_learning.md  compliance_learning.md  missing_import_learning.md  palette.md
.agent/: arche.md  tools.yaml
.ai/: JULIUS_TASK.md  guidelines.md
.claude/: .credentials.json
.codex/: auth.json  models_cache.json
.gemini/: .gitignore  GEMINI.md  state.json
.gsutil/: credstore2  gcecredcache
.jules/: bolt.md
.redhat/: anonymousId
.verification/: verify_aria.py
M:\Brain\.hegemonikon\excavated/: dummy_strings.md
assets/: hgk-prompt.sh
ccl/: CCL_FREEZE.md  PROOF.md  README.md  ccl_macro_reference.md  operators.md  python_concepts_import.md  wf_classification.md
data/: quiz_log.json
deploy/: README.md
designs/: PROOF.md  f6_context_auto_update.md  f9_ga_pw_integration.py
devtools/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/: ARCHITECTURE.md  PROOF.md  STRUCTURE.md  api_keys_checklist.md  ccl_macro_reference.md  ccl_usage_examples.md  checkpoint_schema.md  cognitive_algebra_reference.md  completion_map.json  completion_map.md  derivatives_reference.md  enrich_o_series.py  enrich_pka_series.py  enrich_sh_series.py  gemini_transcription_manual.md  generate_wf_data.py  gpu_required_tasks.md  handoff_20260124_prompt-lang-integration.md  jules-charter.md  jules-repository-setup.md  jules-specialists-catalog.md  model-selection-guide.md  patch_wf_data.py  perplexity_quality_review_design.md  perplexity_specialist_research.md  perplexity_tasks_templates.md  recovered_prompt-lang_session.md  session_handoff_20260123.md  specialist_run_20260206_2113.json  specialist_run_results.json  specialist_run_results_v2.json  specialist_run_results_v3.json  specialist_run_tier1_20260206_2211.json  synedrion_dev_protocols.md  update_manual_otkx.md  update_manual_prompt-lang-integration.md  wf-cheatsheet.html  wf-data.js  windows_migration_guide.md  workflow_inventory.md
experiments/: activation_steering_local.py  activation_steering_mvp.ipynb  activation_steering_v2.py  f0_ccl_test.py  f7_calibration_results.json  f7_threshold_calibration.py  gpu_embed_bench.py  ki_promotion_poc.py  openmanus_mvp.ipynb  precision_weights_calibration.py  precision_weights_defaults.json  steering_results_1.5b.json
fm_output/: poc_exec_test.xml  poc_minimal_snippet.xml  poc_set_field.xml  poc_set_field_real.xml
forge/: .gitignore  GEMINI.md  PROJECT_HANDOVER.md  build-index.ps1  cli.js  start-server.ps1  test_fast_fetch.py  test_output.md
gnosis_data/: state.json
hegemonikon-guide/: index.html  pnpm-lock.yaml
hegemonikon.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
hermeneus/: .env  .env.save  PROJECT.md  PROOF.md  README.md  mcp_config.json
hgk/: PROOF.md  README.md  TASK_NOTIFICATION_PANEL.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  (+3 more)
hgk-app/: README.md
hgk-desktop/: TASK_NOTIFICATION_PANEL.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
hgk/src-tauri/: Cargo.toml  tauri.conf.json
hgk/src-tauri/src/: lib.rs  main.rs
hgk/src-tauri/src/a11y/: bytebot.rs  cache.rs  error.rs  events.rs  mod.rs  router.rs  tree.rs
(+12952 files in other folders)
