[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hegemonikon"
version = "0.1.0"
description = "FEP-based cognitive hypervisor framework"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "pyyaml",
    "requests",
    "httpx",
    "sentence-transformers",
    "lancedb",
    "numpy",
    "scipy",
    "pandas",
    "networkx",
    "tabulate",
    "schedule",
    "pytest",
    "pytest-asyncio",
    "pytest-timeout",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-timeout",
    "httpx",  # for TestClient
]

[tool.setuptools.packages.find]
include = ["mekhane*", "hermeneus*", "kernel*", "synergeia*", "scripts*"]
exclude = ["tests*", "*.tests", "*.tests.*", "tests.*"]

[tool.pytest.ini_options]
testpaths = [
    "hermeneus/tests",
    "mekhane/tests",
    "mekhane/tests_root",
    "mekhane/fep/tests",
    "mekhane/pks/tests",
    "mekhane/dendron/tests",
    "mekhane/symploke/tests",
    "mekhane/anamnesis/tests",
    "mekhane/peira/tests",
    "mekhane/poiema/flow/tests",
    "mekhane/ergasterion/digestor/tests",
    "mekhane/ergasterion/synedrion/tests",
    "synergeia/tests",
    "scripts/tests",
    "kernel/constitution/tests",
    "mneme/.hegemonikon/tests",
]
asyncio_mode = "strict"
filterwarnings = [
    "ignore::DeprecationWarning:lmql",
    "ignore:module 'sre_parse':DeprecationWarning",
    "ignore:module 'sre_constants':DeprecationWarning",
    "ignore:table_names:DeprecationWarning",
    "ignore:This process.*is multi-threaded:DeprecationWarning",
    "ignore:lance is not fork-safe:UserWarning",
]
